--- a/components/header.html
+++ b/components/header.html
@@ -69,7 +69,7 @@
       </button>
       
       <!-- CTA Button Desktop -->
-      <a href="mailto:info@ludusmentis.be" class="btn btn-cta btn-sm hidden lg:flex">
+      <a href="contact.html" class="btn btn-cta btn-sm hidden lg:flex">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 mr-2" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M2 4a2 2 0 012-2h16a2 2 0 012 2v0.5l-10 6L2 4.5V4zm0 3.236l9.445 5.667a1 1 0 001.11 0L22 7.236V20a2 2 0 01-2 2H4a2 2 0 01-2-2V7.236z"/></svg>S\'inscrire
       </a>
       
@@ -98,7 +98,7 @@
           <li><a href="faq.html" class="pl-4 py-2 dark:text-gray-300">FAQ</a></li>
           <li><a href="preuves.html" class="text-base py-3 font-medium dark:text-gray-300">Preuves scientifiques</a></li>
           <li class="mt-4">
-            <a href="mailto:info@ludusmentis.be" class="btn btn-cta btn-block">
+            <a href="contact.html" class="btn btn-cta btn-block">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 mr-2" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M2 4a2 2 0 012-2h16a2 2 0 012 2v0.5l-10 6L2 4.5V4zm0 3.236l9.445 5.667a1 1 0 001.11 0L22 7.236V20a2 2 0 01-2 2H4a2 2 0 01-2-2V7.236z"/></svg>S\'inscrire
             </a>
           </li>
