--- a/components/header.html
+++ b/components/header.html
@@ -23,9 +23,8 @@
           </button>
           <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 dark:bg-gray-800 rounded-xl w-56 mt-3 border border-gray-200 dark:border-gray-700">
             <li><a href="programmes.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Programmes</a></li>
-            <li><a href="methode.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Notre méthode</a></li>
+            <li><a href="methode.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Notre approche</a></li>
             <li><a href="jeux.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Nos jeux</a></li>
-            <li><a href="mesure.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Mesure d'impact</a></li>
             <li><a href="charte.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Charte & sécurité</a></li>
           </ul>
         </li>
@@ -38,14 +37,13 @@
             </svg>
           </button>
           <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 dark:bg-gray-800 rounded-xl w-56 mt-3 border border-gray-200 dark:border-gray-700">
-            <li><a href="tarifs.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Tarifs</a></li>
-            <li><a href="planning.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Planning 2026</a></li>
+            <li><a href="infos-tarifs.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Infos & tarifs</a></li>
             <li><a href="faq.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">FAQ</a></li>
             <li><a href="contact.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Contact</a></li>
           </ul>
         </li>
 
-        <li><a href="preuves.html" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg focus:ring-2 focus:ring-orange-500">Preuves</a></li>
+        <li><a href="recherche.html" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg focus:ring-2 focus:ring-orange-500">La recherche</a></li>
       </ul>
     </nav>
 
@@ -82,17 +80,15 @@
             <span class="text-gray-600 dark:text-gray-400 text-xs uppercase font-bold">Le Club</span>
           </li>
           <li><a href="programmes.html" class="pl-4 py-2 dark:text-gray-300">Programmes</a></li>
-          <li><a href="methode.html" class="pl-4 py-2 dark:text-gray-300">Notre méthode</a></li>
+          <li><a href="methode.html" class="pl-4 py-2 dark:text-gray-300">Notre approche</a></li>
           <li><a href="jeux.html" class="pl-4 py-2 dark:text-gray-300">Nos jeux</a></li>
-          <li><a href="mesure.html" class="pl-4 py-2 dark:text-gray-300">Mesure d'impact</a></li>
           <li><a href="charte.html" class="pl-4 py-2 dark:text-gray-300">Charte & sécurité</a></li>
           <li class="menu-title pt-3">
             <span class="text-gray-600 dark:text-gray-400 text-xs uppercase font-bold">Infos pratiques</span>
           </li>
-          <li><a href="tarifs.html" class="pl-4 py-2 dark:text-gray-300">Tarifs</a></li>
-          <li><a href="planning.html" class="pl-4 py-2 dark:text-gray-300">Planning 2026</a></li>
+          <li><a href="infos-tarifs.html" class="pl-4 py-2 dark:text-gray-300">Infos & tarifs</a></li>
           <li><a href="faq.html" class="pl-4 py-2 dark:text-gray-300">FAQ</a></li>
-          <li><a href="preuves.html" class="text-base py-3 font-medium dark:text-gray-300">Preuves scientifiques</a></li>
+          <li><a href="recherche.html" class="text-base py-3 font-medium dark:text-gray-300">La recherche</a></li>
           <li class="mt-4">
             <a href="mailto:info@ludusmentis.be" class="btn btn-primary btn-block text-white">
               S'inscrire
